[package]
name = "jupiter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = { version = "1.0.140"}
solana-client = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
tokio = "1.44.2"
dashmap = "6.1.0"
borsh = "0.10.4"
reqwest = "0.12.22"
anchor-lang = "0.31.1"
anchor-client = "0.31.1"
axum = "0.8.4"
tracing-subscriber = "0.3.19"
